objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>OC_Middle_Initials__c</fullName>
        <label>Order Contact Middle Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Mobile_Phone_Number__c</fullName>
        <label>Order Contact Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OC_Phone_Extension__c</fullName>
        <label>Order Contact Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Phone_Number__c</fullName>
        <label>Order Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OC_Title__c</fullName>
        <label>Order Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings (Order Contact)</relationshipLabel>
        <relationshipName>OC_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Reference_Number__c</fullName>
        <description>This field is for capturing Order Reference Number information in relation to a booking</description>
        <label>Order Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated by routing table logic</description>
        <label>Origin Depot</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (Origin Depot)</relationshipLabel>
        <relationshipName>OrigDepBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Universe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paperwork_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver take notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Quote must belong to the same Account as the booking</errorMessage>
            <filterItems>
                <field>Quote__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Depot_Rejection__c</fullName>
        <description>When a depot rejects a booking, they need to check the &apos;Booking Rejected by Depot&apos; field, which will raise a case. A reason for this rejection should be provided as a text comment with the rejection.</description>
        <inlineHelpText>What is the reason for the Depot rejecting the booking?</inlineHelpText>
        <label>Reason for Depot Rejection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owners_Manager__c</fullName>
        <description>Shows the name of the record Owners Manager as setup on User records. This field is used for reporting at team level.</description>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
        <label>Record Owners Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_provided_by_customer__c</fullName>
        <description>This field is for capturing a reference number that a customer may have provided to TNT. It can be totally unique for each booking, and is determined by the customer.</description>
        <inlineHelpText>If the customer has provided their own reference number for the booking, what is it?</inlineHelpText>
        <label>Reference # provided by customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Order_Number__c</fullName>
        <label>Regular Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot Boundary Reference</label>
        <referenceTo>Routing_Table__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Restricted by Services on Line of Buisness (LOB_Service__c)</description>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <formula>IF(!ISBLANK(Account__r.Account_Special_Instructions__c),Account__r.Account_Special_Instructions__c,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_2__c),Account__r.Special_Instructions_2__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_3__c),Account__r.Special_Instructions_3__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_4__c),Account__r.Special_Instructions_4__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_5__c),Account__r.Special_Instructions_5__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_6__c),Account__r.Special_Instructions_6__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_for_the_Driver__c</fullName>
        <description>This field is for capturing Special Instructions for the Driver in relation to a booking</description>
        <label>Special Instructions for the Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Collected</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated to Round</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
                <color>#000000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#BBBBBB</color>
            </picklistValues>
            <picklistValues>
                <fullName>Collected</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected to Customer Services</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Service__c</fullName>
        <description>Populated based on checkboxes Dangerous_Goods__c Carriage_Forward__c</description>
        <label>Sub Service</label>
        <picklist>
            <picklistValues>
                <fullName>Carriage Forward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous Goods</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Synchronisation_Error_Message__c</fullName>
        <label>Synchronisation Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Acknowledgement__c</fullName>
        <label>Third Party Acknowledgement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Auto populated from sum of line items, can be overridden</description>
        <label>Total Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume__c</fullName>
        <label>Total Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume_m3__c</fullName>
        <formula>Total_Volume__c / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume (m3)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <description>Auto populated from sum of line items, can be overridden</description>
        <label>Total Weight</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Bookings</label>
    </listViews>
    <listViews>
        <fullName>Created_Today_in_Service_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <columns>Carriage_Forward__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Integration User</value>
        </filters>
        <label>Created Today in Service Cloud</label>
    </listViews>
    <listViews>
        <fullName>Created_Today_in_Service_Cloud_Issues</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Synchronisation_Error_Message__c</columns>
        <columns>Is_Synchronisation_Failed__c</columns>
        <columns>Account__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <columns>Collection_Depot__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Integration User</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>Collection_Ready_Time__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Booking__c.New_Booking</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Integration User</value>
        </filters>
        <label>Created Today in Service Cloud - Issue?</label>
        <sharedTo>
            <group>Development_Managers</group>
            <role>UKIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Yester_in_Service_Cloud_Issues</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Collection_Depot__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Is_Synchronisation_Failed__c</columns>
        <columns>Synchronisation_Error_Message__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <columns>Carriage_Forward__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Integration User</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>Collection_Ready_Time__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Yester in Service Cloud - Issue?</label>
        <sharedTo>
            <group>Development_Managers</group>
            <role>UKIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Bookings</label>
    </listViews>
    <listViews>
        <fullName>My_Rejected_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected to Customer Services</value>
        </filters>
        <label>My Rejected Bookings</label>
    </listViews>
    <listViews>
        <fullName>My_Unconfirmed_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Unconfirmed Bookings</label>
    </listViews>
    <listViews>
        <fullName>Not_Collected_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Collected</value>
        </filters>
        <filters>
            <field>Collection_Ready_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Not Collected Today</label>
    </listViews>
    <listViews>
        <fullName>Rejected_to_CS_Last_2_Days</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected to Customer Services</value>
        </filters>
        <filters>
            <field>Collection_Ready_Time__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>Rejected to CS Last 2 Days</label>
    </listViews>
    <listViews>
        <fullName>Todays_Unconfirmed_Bookings</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Collection_Ready_Time__c</columns>
        <columns>OC_First_Name__c</columns>
        <columns>OC_Last_Name__c</columns>
        <columns>OC_Phone_Number__c</columns>
        <columns>Coll_Org_Name__c</columns>
        <columns>Coll_Postcode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <filters>
            <field>Collection_Ready_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Unconfirmed Bookings</label>
    </listViews>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <recordTypes>
        <fullName>Blocked_Booking</fullName>
        <active>true</active>
        <description>Record type for non-editable bookings</description>
        <label>Blocked Booking</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Booking</fullName>
        <active>true</active>
        <description>Default record type</description>
        <label>New Booking</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Authorised_contact</fullName>
        <active>true</active>
        <description>This Validation rule checks that the contact is authorised to make a booking</description>
        <errorConditionFormula>Account__r.Authorization_for_booking_required__c &amp;&amp; NOT( Order_Contact__r.Authorized_for_bookings__c )</errorConditionFormula>
        <errorDisplayField>Order_Contact__c</errorDisplayField>
        <errorMessage>This contact is not authorised to make bookings</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commercial_Invoice_Required</fullName>
        <active>true</active>
        <description>The validation rule for this field would be that if the County/Region field = Channel Islands then the Commerical Invoice Field has to be set to Yes</description>
        <errorConditionFormula>(LOWER(Coll_County__c) == &apos;channel islands&apos; || LOWER(Del_County__c) == &apos;channel islands&apos;) &amp;&amp;  Commercial_Invoice_Required__c == false &amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>When Collection or Delivery County/Region is &apos;Channel Islands&apos;, &apos;Commercial Invoice Required&apos; Field should be set to &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commodity_required</fullName>
        <active>true</active>
        <description>Required field missing: Type of Packaging (Commodity)</description>
        <errorConditionFormula>ISBLANK(TEXT(Commodity__c)) &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>Required field missing: Type of Packaging (Commodity)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Reference_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Account__r.Customer_Reference_Required__c &amp;&amp;  ISBLANK(Customer_Reference__c) &amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>This Account requires a Reference. Please enter one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dangerous_Goods</fullName>
        <active>false</active>
        <description>You cannot save a dangerous goods item to an account which doesn&apos;t ship dangerous goods.</description>
        <errorConditionFormula>ISPICKVAL(Account__r.Dangerous_Goods__c,&apos;No&apos;) &amp;&amp; Dangerous_Goods__c</errorConditionFormula>
        <errorDisplayField>Dangerous_Goods__c</errorDisplayField>
        <errorMessage>You cannot save a dangerous goods item to an account which doesn&apos;t ship dangerous goods.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_Status_None</fullName>
        <active>true</active>
        <description>Validation rule to stop users selecting a booking status of None</description>
        <errorConditionFormula>ISBLANK(TEXT(Status__c)) &amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please select value for Booking Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_address_details_required</fullName>
        <active>true</active>
        <description>The Booking record can only be saved with the &apos;email the booking reference?&apos; field checked if there is a valid Email address for the contact</description>
        <errorConditionFormula>Email_the_booking_reference__c  &amp;&amp;  OC_Email_Address__c  = &apos;&apos; &amp;&amp;   Order_Contact__r.Email  = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Email_the_booking_reference__c</errorDisplayField>
        <errorMessage>To email the booking, you have to select a contact with a stored email address, or populate the email field with an email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Stop_Booking_Prevention_Rule</fullName>
        <active>false</active>
        <description>When the On Stop field is checked, the Account is ON STOP. Only a Stubbins user is able to edit the status of an Account which is ON STOP. No bookings can be saved against this account without permissions from Stubbins.</description>
        <errorConditionFormula>Account__r.On_Stop__c = TRUE &amp;&amp;  !Account__r.Stubbins_Temporary_Permission__c</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>This Account is On Stop. Approval must be given from Stubbins to save a Booking for this Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Weight_must_be_less_than_99999kg</fullName>
        <active>true</active>
        <description>This is required because Universe can only store up to 99999. EDW can store up to 169000</description>
        <errorConditionFormula>Total_Weight__c  &gt; 99999</errorConditionFormula>
        <errorMessage>The &apos;Total Weight&apos; for a Booking must be less than 99999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unconfirmed_Bookings</fullName>
        <active>false</active>
        <description>An agent can confirm manually a Booking only when it&apos;s Unconfirmed</description>
        <errorConditionFormula>ISPICKVAL( Status__c ,&apos;Confirmed&apos;) &amp;&amp;  NOT(TEXT(PRIORVALUE(Status__c)) = &apos;Unconfirmed&apos;) &amp;&amp;   NOT(TEXT(PRIORVALUE(Status__c)) = &apos;Not Collected&apos;) &amp;&amp; NOT(TEXT(PRIORVALUE(Status__c)) = &apos;Rejected to Customer Services&apos;) &amp;&amp; NOT(TEXT(PRIORVALUE(Status__c)) = &apos;&apos;) &amp;&amp;  ISCHANGED(Status__c)
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only bookings with a current Status of Unconfirmed, Rejected to Customer Services or Not Collected can be changed to a &apos;Confirmed&apos; status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Phone_Numbers_CC_Phone_Number</fullName>
        <active>true</active>
        <description>Ensures that bookings made in the system are created with an NVM compatible phone number</description>
        <errorConditionFormula>NOT(REGEX( CC_Phone_Number__c , &quot;[0-9]{7,15}&quot;))
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)
&amp;&amp; NOT(CreatedBy.Profile.Name = &apos;Integration User&apos;)   
&amp;&amp; NOT(ISBLANK(CC_Phone_Number__c))</errorConditionFormula>
        <errorMessage>Please enter a valid phone number (7-15 digits, no spaces)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Phone_Numbers_DC_Phone_Number</fullName>
        <active>true</active>
        <description>Ensures that bookings made in the system are created with an NVM compatible phone number</description>
        <errorConditionFormula>NOT(REGEX( DC_Phone_Number__c , &quot;[0-9]{7,15}&quot;))
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)
&amp;&amp; NOT(CreatedBy.Profile.Name = &apos;Integration User&apos;)   
&amp;&amp; NOT(ISBLANK(DC_Phone_Number__c))</errorConditionFormula>
        <errorMessage>Please enter a valid phone number (7-15 digits, no spaces)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Phone_Numbers_OC_Phone_Number</fullName>
        <active>true</active>
        <description>Ensures that bookings made in the system are created with an NVM compatible phone number</description>
        <errorConditionFormula>NOT(REGEX( OC_Phone_Number__c , &quot;[0-9]{7,15}&quot;))
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)
&amp;&amp; NOT (CreatedBy.Profile.Name = &apos;Integration User&apos;)  
&amp;&amp; NOT(ISBLANK(OC_Phone_Number__c))</errorConditionFormula>
        <errorMessage>Please enter a valid phone number (7-15 digits, no spaces)</errorMessage>
    </validationRules>
</CustomObject>